ispCP ω 1.0.3 Changelog
~~~~~~~~~~~~~~~~~~~~~~~~~~

2009-09-06 Laurent Declercq
	- ENGINE:
		* Fixed #1976: Deleting a user account by going properly

2009-09-06 Andreca Daniel
	- LANGUAGES:
		* Updated Catalan
		* Updated Danish

2009-09-05 Andreca Daniel
	- GUI:
		* Fixed #1975: Error update last version trunk 05/09
		* Fixed #1974: Reseller properties cannot be edited after working with his domains
	- LANGUAGES:
		* Updated Japanese

2009-09-04 Laurent Declercq
    - DOCS:
		* Updated OpenSuSE INSTALL file
		* Added new packages list file for OpenSuSE 11.1
		* Added repositories install script for OpenSuSE 11.1
		* Removed SuSE ( SLE ) documentation
    - DISTS:
		* Removed SuSE ( SLE ) support
		* Updated ( OpenSuSE ):
			- Added support for OpenSuse 11.1
			- Added postinst script for specific install/update tasks
			- Added Policyd-Weight and Postgrey packages
			- Fixed small error during Make process ( cannot overwrite non-directory... )
			- Fixed #1961: Debian and OpenSuSE provide both programs a2enmod/a2dismod but the implementation differs.
			- Fixed #1961: Conflict between FastCGI modules conffiles
			- Fixed Postfix: unknown smtps service in master.cf
			- Fixed Postfix: wrong ispcp-arpl-msgr path in master.cf
			- Changed Postfix: configuration to run unchrooted (I'll set to run in a chroot jail later).
			- Fixed suexec wrapper: owner/group and permissions
			- Removed apache2-mod_cband for 11.1 ( See OpenSuse INSTALL file for more information )
			- Disabled OpenSuSE Firewall ( ispCP provides its own )
			- Fixed #1970: Impossibility of adding new users
    - SETUP:
		* Fixed #1961: Debian and OpenSuSE provide both programs a2enmod/a2dismod but the implementation differs
    - CONFIG:
		* Fixed #1961: Missing EOL in multiple files

2009-09-03 Laurent Declercq
	- DOCS:
		* Fixed #1972: small spelling error

2009-09-01 Laurent Declercq
	- DOCS:
		* Update for OpenSuSE 11.1

2009-08-31 Andreca Daniel
	- LANGUAGES:
		* Updated Turkish
