@@ -1,6 +1,10 @@
 ispCP ω 1.0.3 Changelog
 ~~~~~~~~~~~~~~~~~~~~~~~~~~
 
+2009-09-04 Andreca Daniel
+	- TOOLS:
+		* Fixed #1948: Filemanager Config is wrong / ispCP pic is missing
+
 2009-09-06 Laurent Declercq
 	- ENGINE:
 		* Fixed #1976: Deleting a user account by going properly
